--- a/crossterm_winapi/Cargo.toml
+++ b/crossterm_winapi/Cargo.toml
@@ -13,3 +13,6 @@ edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version =  "0.3.7", features = ["winbase","consoleapi","processenv", "handleapi"] }
+
+[package.metadata.docs.rs]
+default-target = "x86_64-pc-windows-msvc"
