--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ script:
   - rustc --version
   - if [ "$TRAVIS_RUST_VERSION" = "stable" ]; then cargo fmt --all -- --check; fi
   - cargo build
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then cargo test --all -- --nocapture --test-threads 1; else cargo test --all --exclude crossterm_winapi -- --nocapture --test-threads 1; fi
+  - cargo test --all -- --nocapture --test-threads 1
   - scripts/test-examples.sh
