--- a/crossterm_cursor/Cargo.toml
+++ b/crossterm_cursor/Cargo.toml
@@ -12,8 +12,9 @@ readme = "README.md"
 edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version =  "0.3.7", features = ["wincon","winnt","minwindef"] }
 crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}
+lazy_static = "1.4"
+winapi = { version =  "0.3.7", features = ["wincon","winnt","minwindef"] }
 
 [dependencies]
 crossterm_utils = { path="../crossterm_utils", version = "0.2.4"}
