--- a/crossterm_screen/Cargo.toml
+++ b/crossterm_screen/Cargo.toml
@@ -3,7 +3,7 @@ name = "crossterm_screen"
 version = "0.3.0"
 authors = ["T. Post"]
 description = "A cross-platform library for raw and alternate screen."
-repository = "https://github.com/TimonPost/crossterm"
+repository = "https://github.com/crossterm-rs/crossterm"
 documentation = "https://docs.rs/crossterm_screen/"
 license = "MIT"
 keywords = ["screen", "alternate", "raw", "crossterm", "terminal"]
