--- a/crossterm_utils/Cargo.toml
+++ b/crossterm_utils/Cargo.toml
@@ -3,7 +3,7 @@ name = "crossterm_utils"
 version = "0.3.0"
 authors = ["T. Post"]
 description = "Common logic used by the crossterm crates."
-repository = "https://github.com/TimonPost/crossterm"
+repository = "https://github.com/crossterm-rs/crossterm"
 documentation = "https://docs.rs/crossterm_utils/"
 license = "MIT"
 keywords = ["terminal", "abstractions", "crossterm", "windows", "screen_buffer"]
