--- a/crossterm_cursor/Cargo.toml
+++ b/crossterm_cursor/Cargo.toml
@@ -3,7 +3,7 @@ name = "crossterm_cursor"
 version = "0.3.0"
 authors = ["T. Post"]
 description = "A cross-platform library for moving the terminal cursor."
-repository = "https://github.com/TimonPost/crossterm"
+repository = "https://github.com/crossterm-rs/crossterm"
 documentation = "https://docs.rs/crossterm_cursor/"
 license = "MIT"
 keywords = ["cursor", "cli", "crossterm", "crossplatform", "terminal"]
