--- a/crossterm_input/Cargo.toml
+++ b/crossterm_input/Cargo.toml
@@ -3,7 +3,7 @@ name = "crossterm_input"
 version = "0.4.0"
 authors = ["T. Post"]
 description = "A cross-platform library for reading userinput."
-repository = "https://github.com/TimonPost/crossterm"
+repository = "https://github.com/crossterm-rs/crossterm"
 documentation = "https://docs.rs/crossterm_input/"
 license = "MIT"
 keywords = ["input", "keys", "crossterm", "events", "terminal"]
