--- a/crossterm_style/Cargo.toml
+++ b/crossterm_style/Cargo.toml
@@ -3,7 +3,7 @@ name = "crossterm_style"
 version = "0.5.0"
 authors = ["T. Post"]
 description = "A cross-platform library styling the terminal output."
-repository = "https://github.com/TimonPost/crossterm"
+repository = "https://github.com/crossterm-rs/crossterm"
 documentation = "https://docs.rs/crossterm_style/"
 license = "MIT"
 keywords = ["style", "color", "attributes", "crossterm", "terminal"]
