--- a/crossterm_terminal/Cargo.toml
+++ b/crossterm_terminal/Cargo.toml
@@ -3,7 +3,7 @@ name = "crossterm_terminal"
 version = "0.3.0"
 authors = ["T. Post"]
 description = "A cross-platform library for doing terminal related actions."
-repository = "https://github.com/TimonPost/crossterm"
+repository = "https://github.com/crossterm-rs/crossterm"
 documentation = "https://docs.rs/crossterm_terminal/"
 license = "MIT"
 keywords = ["terminal", "clear", "console", "crossterm", "size"]
