--- a/crossterm_cursor/Cargo.toml
+++ b/crossterm_cursor/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "crossterm_cursor"
-version = "0.2.5"
+version = "0.3.0"
 authors = ["T. Post"]
 description = "A cross-platform library for moving the terminal cursor."
-repository = "https://github.com/TimonPost/crossterm"
+repository = "https://github.com/crossterm-rs/crossterm"
 documentation = "https://docs.rs/crossterm_cursor/"
 license = "MIT"
 keywords = ["cursor", "cli", "crossterm", "crossplatform", "terminal"]
@@ -12,8 +12,8 @@ readme = "README.md"
 edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version =  "0.3.7", features = ["wincon","winnt","minwindef"] }
-crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}
+winapi = { version =  "0.3.8", features = ["wincon","winnt","minwindef"] }
+crossterm_winapi = { path="../crossterm_winapi", version = "0.2.0"}
 
 [dependencies]
-crossterm_utils = { path="../crossterm_utils", version = "0.2.4"}
+crossterm_utils = { path="../crossterm_utils", version = "0.3.0"}
