--- a/crossterm_terminal/Cargo.toml
+++ b/crossterm_terminal/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "crossterm_terminal"
-version = "0.2.5"
+version = "0.3.0"
 authors = ["T. Post"]
 description = "A cross-platform library for doing terminal related actions."
-repository = "https://github.com/TimonPost/crossterm"
+repository = "https://github.com/crossterm-rs/crossterm"
 documentation = "https://docs.rs/crossterm_terminal/"
 license = "MIT"
 keywords = ["terminal", "clear", "console", "crossterm", "size"]
@@ -12,12 +12,12 @@ readme = "README.md"
 edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
-crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}
+crossterm_winapi = { path="../crossterm_winapi", version = "0.2.0"}
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.51"
 
 [dependencies]
-crossterm_utils = { path="../crossterm_utils", version = "0.2.4"}
-crossterm_cursor = {path="../crossterm_cursor", version = "0.2.5"}
+crossterm_utils = { path="../crossterm_utils", version = "0.3.0"}
+crossterm_cursor = { path="../crossterm_cursor", version = "0.3.0"}
 serde = { version = "1.0.0", features = ["derive"], optional = true }
