--- a/crossterm_utils/Cargo.toml
+++ b/crossterm_utils/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "crossterm_utils"
-version = "0.2.4"
+version = "0.3.0"
 authors = ["T. Post"]
 description = "Common logic used by the crossterm crates."
-repository = "https://github.com/TimonPost/crossterm"
+repository = "https://github.com/crossterm-rs/crossterm"
 documentation = "https://docs.rs/crossterm_utils/"
 license = "MIT"
 keywords = ["terminal", "abstractions", "crossterm", "windows", "screen_buffer"]
@@ -12,8 +12,8 @@ readme = "README.md"
 edition = "2018"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version =  "0.3.7", features = ["wincon"] }
-crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}
+winapi = { version =  "0.3.8", features = ["wincon"] }
+crossterm_winapi = { path="../crossterm_winapi", version = "0.2.0"}
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.51"
