Make the job name shorter
Signed-off-by: Robert Vojta <rvojta@me.com>

--- a/.github/workflows/crossterm_test.yml
+++ b/.github/workflows/crossterm_test.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   test:
-    name: Rust ${{matrix.rust}} on ${{ matrix.os }}
+    name: ${{matrix.rust}} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
