--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crossterm"
-version = "0.11.1"
+version = "0.12.0"
 authors = ["T. Post"]
 description = "An crossplatform terminal library for manipulating terminals."
 repository = "https://github.com/crossterm-rs/crossterm"
@@ -21,12 +21,12 @@ screen = ["crossterm_screen"]
 input = ["crossterm_input"]
 
 [dependencies]
-crossterm_screen = { git = "https://github.com/crossterm-rs/crossterm-screen", branch = "master", version = "0.3.1"  , optional = true  }
-crossterm_cursor = { version = "0.3.1"  , optional = true  }
-crossterm_terminal = { version = "0.3.1", optional = true  }
-crossterm_style = {  git = "https://github.com/crossterm-rs/crossterm-style", branch = "master", version = "0.5.1", optional = true }
-crossterm_input = { version = "0.4.1"   , optional = true  }
-crossterm_utils = { version = "0.3.1"   , optional = false }
+crossterm_screen = { version = "0.3.2", optional = true  }
+crossterm_cursor = { version = "0.4.0", optional = true  }
+crossterm_terminal = { version = "0.3.2", optional = true  }
+crossterm_style = { version = "0.5.2", optional = true }
+crossterm_input = { version = "0.5.0", optional = true  }
+crossterm_utils = { version = "0.4.0", optional = false }
 
 [lib]
 name = "crossterm"
