--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,11 @@ cursor = ["lazy_static", "input", "winapi/wincon", "winapi/winnt", "winapi/minwi
 style = ["lazy_static", "winapi/wincon"]
 terminal = ["cursor"]
 screen = ["winapi/wincon", "winapi/minwindef"]
-input = ["mio", "lazy_static", "shrev", "screen", "winapi/winnt", "winapi/winuser"]
+input = ["mio", "lazy_static", "screen", "winapi/winnt", "winapi/winuser"]
 
 [dependencies]
 lazy_static = { version = "1.4", optional = true }
 serde = { version = "1.0.0", features = ["derive"], optional = true }
-shrev = { version = "1.1", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.3.8"
