Rename `InputEvent` to `Event` Rename `Event::KeyBord` to `Event::Key` Rename `crossterm::input` to `crossterm::event` Rename `input` feature flag to `event` Remove `Event::CursorPosition(x,y)` Remove `Event::UnSupported` Remove `AsyncReader`, `SyncReader` Remove `TerminalInput` Introduce `poll` and `read` as new API.

--- a/.github/workflows/crossterm_test.yml
+++ b/.github/workflows/crossterm_test.yml
@@ -63,7 +63,7 @@ jobs:
       run: cargo test --features screen --no-default-features --lib -- --nocapture --test-threads 1
       continue-on-error: ${{ matrix.can-fail }}
     - name: Test input Feature
-      run: cargo test --features input --no-default-features --lib -- --nocapture --test-threads 1
+      run: cargo test --features event --no-default-features --lib -- --nocapture --test-threads 1
       continue-on-error: ${{ matrix.can-fail }}
     - name: Test Packaging
       if: matrix.rust == 'stable'
