--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,4 @@ path = "src/lib.rs"
 [dev-dependencies]
 tokio = "0.2.0-alpha.6"
 futures = "0.3.1"
+signal-hook = { version = "0.1.11", features=["mio-support"]}
