--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,4 +39,6 @@ path = "src/lib.rs"
 
 [dev-dependencies]
 tokio = "0.2.0-alpha.6"
-futures = "0.3.1"
+futures = "0.3"
+futures-timer = "2"
+async-std = "1"
