--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,11 @@ cursor = ["lazy_static", "event", "winapi/wincon", "winapi/winnt", "winapi/minwi
 style = ["lazy_static", "winapi/wincon"]
 terminal = ["cursor"]
 screen = ["lazy_static", "winapi/wincon", "winapi/minwindef"]
-event = ["mio", "lazy_static", "screen", "winapi/winnt", "winapi/winuser", "winapi/wincon"]
+event = ["mio", "lazy_static", "parking_lot", "screen", "winapi/winnt", "winapi/winuser", "winapi/wincon"]
 
 [dependencies]
 lazy_static = { version = "1.4", optional = true }
+parking_lot = { version = "0.9", optional = true }
 serde = { version = "1.0.0", features = ["derive"], optional = true }
 
 [target.'cfg(windows)'.dependencies]
