--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,13 @@ style = ["lazy_static", "winapi/wincon"]
 terminal = ["cursor"]
 screen = ["lazy_static", "winapi/wincon", "winapi/minwindef"]
 event = ["mio", "lazy_static", "parking_lot", "screen", "terminal", "winapi/winnt", "winapi/winuser", "winapi/wincon", "winapi/synchapi", "winapi/namedpipeapi", "winapi/impl-default"]
+async-event = ["event", "futures"]
 
 [dependencies]
 lazy_static = { version = "1.4", optional = true }
 parking_lot = { version = "0.9", optional = true }
 serde = { version = "1.0.0", features = ["derive"], optional = true }
+futures = {version = "0.3", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.3.8"
