--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,11 @@ cursor = ["lazy_static", "event", "winapi/wincon", "winapi/winnt", "winapi/minwi
 style = ["lazy_static", "winapi/wincon"]
 terminal = ["cursor"]
 screen = ["lazy_static", "winapi/wincon", "winapi/minwindef"]
-event = ["mio", "lazy_static", "parking_lot", "screen", "terminal", "winapi/winnt", "winapi/winuser", "winapi/wincon", "winapi/synchapi", "winapi/namedpipeapi", "winapi/impl-default"]
+event = ["bitflags", "mio", "lazy_static", "parking_lot", "screen", "terminal", "winapi/winnt", "winapi/winuser", "winapi/wincon", "winapi/synchapi", "winapi/namedpipeapi", "winapi/impl-default"]
 async-event = ["event", "futures"]
 
 [dependencies]
+bitflags = { version = "1.2", optional = true }
 lazy_static = { version = "1.4", optional = true }
 parking_lot = { version = "0.9", optional = true }
 serde = { version = "1.0.0", features = ["derive"], optional = true }
