--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,26 +12,40 @@ readme = "README.md"
 edition = "2018"
 categories = ["command-line-interface", "command-line-utilities"]
 
+[lib]
+name = "crossterm"
+path = "src/lib.rs"
+
+[package.metadata.docs.rs]
+all-features = true
+
 [features]
-default = ["cursor", "style", "terminal", "screen", "input"]
-cursor = ["lazy_static", "input", "winapi/wincon", "winapi/winnt", "winapi/minwindef"]
+default = ["cursor", "style", "terminal", "screen", "event"]
+cursor = ["lazy_static", "event", "winapi/wincon", "winapi/winnt", "winapi/minwindef"]
 style = ["lazy_static", "winapi/wincon"]
 terminal = ["cursor"]
 screen = ["lazy_static", "winapi/wincon", "winapi/minwindef"]
-input = ["mio", "lazy_static", "screen", "winapi/winnt", "winapi/winuser"]
+event = ["bitflags", "mio", "lazy_static", "parking_lot", "screen", "terminal", "winapi/winnt", "winapi/winuser", "winapi/wincon", "winapi/synchapi", "winapi/namedpipeapi", "winapi/impl-default"]
+event-stream = ["event", "futures"]
 
 [dependencies]
+bitflags = { version = "1.2", optional = true }
 lazy_static = { version = "1.4", optional = true }
+parking_lot = { version = "0.9", optional = true }
 serde = { version = "1.0.0", features = ["derive"], optional = true }
+futures = {version = "0.3", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.3.8"
-crossterm_winapi = "0.4.0"
+crossterm_winapi = { git = "https://github.com/crossterm-rs/crossterm-winapi", branch = "input_rewrite_changes" }
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.51"
 mio = { version = "0.6.19", optional = true }
+signal-hook = { version = "0.1.11", features=["mio-support"]}
 
-[lib]
-name = "crossterm"
-path = "src/lib.rs"
+[dev-dependencies]
+tokio = "0.2.0-alpha.6"
+futures = "0.3"
+futures-timer = "2"
+async-std = "1"
