--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ script:
   - rustup --version
   - rustc --version
   - if [ "$TRAVIS_RUST_VERSION" = "stable" ]; then cargo fmt --all -- --check; fi
+  - cargo clippy -- -D clippy::all
   - cargo build
   - cargo test --all-features --no-default-features -- --nocapture --test-threads 1
   - cargo test --features cursor --no-default-features --lib -- --nocapture --test-threads 1
