--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,8 @@ script:
   - if [ "$TRAVIS_RUST_VERSION" = "stable" ]; then cargo fmt --all -- --check; fi
   - cargo clippy -- -D clippy::all
   - cargo build
-  - cargo test --all-features --no-default-features -- --nocapture --test-threads 1
-  - cargo test --features cursor --no-default-features --lib -- --nocapture --test-threads 1
-  - cargo test --features style --no-default-features --lib -- --nocapture --test-threads 1
-  - cargo test --features terminal --no-default-features --lib -- --nocapture --test-threads 1
-  - cargo test --features screen --no-default-features --lib -- --nocapture --test-threads 1
-  - cargo test --features event --no-default-features --lib -- --nocapture --test-threads 1
-  - cargo test --features event-stream --no-default-features --lib -- --nocapture --test-threads 1
+  - cargo test --lib -- --nocapture --test-threads 1
+  - cargo test --lib --features serde -- --nocapture --test-threads 1
+  - cargo test --lib --features event-stream -- --nocapture --test-threads 1
+  - cargo test --all-features -- --nocapture --test-threads 1
+  - if [ "$TRAVIS_RUST_VERSION" = "stable" ]; then cargo package; fi
