--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ event-stream = ["futures"]
 #
 [dependencies]
 bitflags = "1.2"
+anes = { git = "https://github.com/zrzka/anes-rs.git", branch = "zrzka/parser", features = ["parser"] }
 futures = { version = "0.3", optional = true }
 lazy_static = "1.4"
 parking_lot = "0.9"
