--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "An crossplatform terminal library for manipulating terminals."
 repository = "https://github.com/crossterm-rs/crossterm"
 documentation = "https://docs.rs/crossterm/"
 license = "MIT"
-keywords = ["event", "color", "cursor", "input", "terminal"]
+keywords = ["event", "color", "cli", "input", "terminal"]
 exclude = ["target", "Cargo.lock"]
 readme = "README.md"
 edition = "2018"
