Switch from 'futures' to 'futures-util' crate to reduce dep count by 10
This decreases initial compile times by 10s with the `event-stream`
feature selected.

* 1min 18s with this change
* 1min 29s without

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ all-features = true
 #
 [features]
 default = []
-event-stream = ["futures"]
+event-stream = ["futures-util"]
 
 #
 # Shared dependencies
@@ -36,7 +36,7 @@ event-stream = ["futures"]
 bitflags = "1.2"
 lazy_static = "1.4"
 parking_lot = "0.10"
-futures = { version = "0.3", optional = true }
+futures-util = { version = "0.3", optional = true, default-features = false }
 serde = { version = "1.0", features = ["derive"], optional = true }
 
 #
