--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ tokio = { version = "1.5", features = ["full"] }
 futures = "0.3"
 futures-timer = "3.0"
 async-std = "1.9"
+serde_json = "1.0.45"
 
 #
 # Examples
